adding starting code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
   </head>
   <body>
+    <script src="massTable.js"></script>
+    <script src="codonTable.js"></script>
+    <script src="solutions.js"></script>
+    <script src="problems.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
