--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.js"></script>
   </head>
   <body>
+    <script src="GSUtil.js"></script>
     <script src="codonTable.js"></script>
     <script src="GeneticString.js"></script>
     <script src="DNAString.js"></script>
